# disclosure_anchor

./: .env.example  .env.template  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
config/: disclosure_anchor.default.yaml
contracts/normalized_ir/: normalized_ir.v1.json
docs/: MCP_SETUP_GUIDE.md  巨潮api.md
docs/agent/: Documentation.md  Implement.md  Plan.md  Prompt.md  Status.md  code_review.md
docs/architecture/: cninfo-announcement-categories.json  cninfo-interfaces.schema.json  cninfo-securities.json  cninfo-webapi-usage-reference.md  cninfo-webapi-verification.md  database-selection.md  disclosure_anchor_实施方案_v1.0.md  open-source-references.md  pdf-parsing-investigation.md  raw-to-l3-data-layer-direction.md  service-purpose.md  投研预测引擎顶层框架协议_v0.4.md  投研预测引擎顶层框架协议_v0.5.md  财报与披露数据接入及切分方案.md
docs/implementation/: 000-design-review-note.md  001-disclosure-anchor-framework.md  002-implementation-roadmap.md  003-agent-execution-rules.md  README.md  disclosure_anchor_phase000_004_final_merged_review.md
docs/reference/: 投研预测引擎顶层框架协议_v0.5.md  投研预测引擎顶层框架协议_v0.6.md
src/disclosure_anchor/: __init__.py  bootstrap.py  main.py  settings.py
tests/: __init__.py
tests/contract/: __init__.py  test_normalized_ir_contract.py  test_phase00_fixtures.py
tests/integration/: __init__.py  _support.py  test_parse_document.py  test_permissions.py  test_public_views_content.py  test_register_local_pdf.py  test_repository_uow.py  test_schema_and_views.py
tests/sample_corpus/: __init__.py  test_sample_filings.py
(+97 files in other folders)
